# hohh

./: .gitignore  .pylintrc  LICENSE  README.md  Taskfile.yaml  example.env  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr_checks.yml
hohh/: __main__.py  config.py  config_test.py  lastfm.py  main.py  spotify.py
