[tool.poetry]
name = "hohh"
version = "0.1.0"
description = ""
authors = ["Riley Chase <riley.chase@rileychase.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylast = "^5.1.0"
pytz = "^2022.7"


[tool.poetry.group.dev.dependencies]
black = "==22.12.0"
rope = "^1.6.0"
mypy = "==0.991"
pylint = "==2.15.10"
types-pytz = "^2022.7.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
