[tool.poetry]
name = "hohh"
version = "0.1.0"
description = ""
authors = ["Riley Chase <riley.chase@rileychase.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylast = "^5.1.0"
pytz = "^2023.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "==23.10.1"
rope = "^1.6.0"
mypy = "==1.6.0"
pylint = "==3.0.2"
types-pytz = "^2023.2.0.1"
pytest = "^7.2.0"
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
