[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hohh"
version = "0.1.0"
description = ""
authors = ["Riley Chase <riley.chase@rileychase.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylast = "^5.1.0"
pytz = "^2024.1"
requests = "^2.28.1"
ruff = "^0.6.1"

[tool.poetry.group.dev.dependencies]
rope = "^1.6.0"
mypy = "^1.7.1"
types-pytz = "^2024.1.0.20240203"
pytest = "^8.0.0"
types-requests = "^2.28.11.7"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "D100",    # undocumented-public-module
    "D104",    # undocumented-public-package
    "D105",    # undocumented-magic-method
    "D107",    # undocumented-public-init
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ005",  # call-datetime-now-without-tzinfo
    "DTZ007",  # call-datetime-strptime-without-zone
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "FIX002",  # line-contains-todo
    "PLR2004", # magic-value-comparison
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = [
    "ANN401", # any-type
    "D103",   # undocumented-public-function
    "S101",   # assert
    "SLF001", # private-member-access
]
"hohh/main.py" = [
    "T201", # print
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
show_error_codes = true
pretty = true
